--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pdfminer-six>=20240706",
     "docx2txt>=0.8",
+    "tqdm>=4.66.5",
 ]
 
 [build-system]
