--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ docx2txt
 pillow
 pypandoc
 docx2python
-#textract
+textract
 PyMuPDF
 python-docx
 pdfplumber
 # paddleocr
 llama-index
 langchain_community
+jq
+langchain-text-splitters
